Revision history for C and Perl extension of nfdump.

1.26 2016-12-xx
	- ringbuf support
	- nfdumpp: new shm output format (-o shm) 
	- nfdumpp: new --loop-read option for continuos reading of input file(s)

1.25 2016-12-04
	- libnf and modules moved to separate repositories (libnf, libnf-ffilter, libnf-perl)
	  command git submodule update --remote --merge must be used to update to latest 
	  submodule reference
	-c: some leaks in memheap removed
	-c: versioning of libnf.so added (issue #5, thanks to Tomas Cejka)
	-c: added new API function lnf_mem_clean(lnf_mem_t *lnf_mem)
	-c: added exmaple lnf_ex11_memclean.c
	-c: new function lnf_rec_get_raw/lnf_rec_set_raw
	-c: new example examples/lnf_ex12_rec_raw.c 
	-c: new function lnf_filter_ffilter_ptr
	-c: fix of RPM build (issue #5, thanks to Tomas Cejka)
	-perl: added new test 53-libnf-filter.t
	-nfdumpp: handles properly error messages for libnf filter
	-nfdumpp: ability ro read binnary format from stdin (nfdumpp -r -)

1.24 2016-06-21
	-perl: better thread testing (with more detailed results)

1.23 2016-06-20
	-c: fixed build on FreeBSD

1.22 2016-06-18
	-c: adjusted to nfdump-1.6.15

1.21 2016-05-28
	-nffdump: invalid mutex initialisation 

1.20 2016-05-09
	-removed several warnings 
	-c: new field LNF_FLD_INET_FAMILY containing either AF_INET or AF_INET6
	-perl: new field inetfamily 
	-perl: new function family2txt and txt2family 
	-nfdumpp: removed bug where nfdumpp produces corupted output file 
	-nfdumpp: added -n option to limit aggregated outputs 

1.19 2016-02-03
	-perl: removed dependency on lbz 

1.18 2016-01-29
	-perl: new variables $flow->{NUM_OF_FIELDS} and $flow->{NAME} can be accesed 
	       Zangerl, Report #110170)
	-c: adjusted to nfdump-1.6.14
	-c: two new lnf_open flags LNF_COMP_LZO and LNF_COMP_BZ2
	-c: two new info options LNF_INFO_LZO_COMPRESSED and LNF_INFO_BZ2_COMPRESSED
	-c: new ./configure option to build with static or dynam BZ2 support