@@ -11,6 +11,7 @@ typedef struct flist_s {
 int flist_init(flist_t **l);
 int flist_push(flist_t **l, char *name);
 int flist_pop(flist_t **l, char *buff);
+int flist_is_empty(flist_t **l);
 int flist_count(flist_t **l);
 int flist_lookup_dir(flist_t **l, char *path);
 
