@@ -1,9 +1,13 @@
 Revision history for C and Perl extension of nfdump.
 
 1.26 2016-12-xx
-	- ringbuf support
-	- nfdumpp: new shm output format (-o shm) 
+	- c: ringbuf support to handle data beween libnf instances 
+	- c: new functions lnf_ring_init, lnf_ring_info, lnf_ring_read,
+	  lnf_ring_write, lnf_ring_free
+	- c: new examples examples/lnf_ex13_ring_write.c, examples/lnf_ex14_ring_read.c
+	- nfdumpp: new shm (ringbuf) output format (-o shm) 
 	- nfdumpp: new --loop-read option for continuos reading of input file(s)
+	- nfdumpp: new --shm-read option for read data from shm (ringbuf)
 
 1.25 2016-12-04
 	- libnf and modules moved to separate repositories (libnf, libnf-ffilter, libnf-perl)
